[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/entities/Ships/Ship.gd" type="Script" id=1]
[ext_resource path="res://resources/Sound/engine.wav" type="AudioStream" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 37.61
gravity = Vector3( 0, 0, 0 )
initial_velocity = 8.0
initial_velocity_random = 0.1
angular_velocity = 1.05
angular_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.2
scale = 3.0
scale_random = 1.0

[sub_resource type="Animation" id=3]
resource_name = "SoundStartAnimation"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:playing")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2.73208 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "SoundStopAnimation"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1.93187 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 4.14106, 2.92817 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[node name="Ship" type="RigidBody2D"]
z_as_relative = false
mode = 2
contacts_reported = 10
contact_monitor = true
linear_damp = 0.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2.076, 2.076 )
shape = SubResource( 1 )

[node name="EngineParticles" type="Particles2D" parent="."]
position = Vector2( -18.7883, 0 )
rotation = 3.14159
emitting = false
amount = 13
local_coords = false
process_material = SubResource( 2 )

[node name="Timers" type="Node" parent="."]

[node name="InvulnerabilityTimer" type="Timer" parent="Timers"]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="BlinkTimer" type="Timer" parent="Timers"]
wait_time = 0.18

[node name="EngineSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
attenuation = 1.7411

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../EngineSound")
method_call_mode = 1
anims/SoundStartAnimation = SubResource( 3 )
anims/SoundStopAnimation = SubResource( 4 )
[connection signal="timeout" from="Timers/InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
[connection signal="timeout" from="Timers/BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
